tooling/nargo_cli/tests/compile_failure/overlapping_generic_impls/src/main.nr

trait Trait { fn t(self); }

impl<T> Trait for T { fn t(self){} }

impl<T> Trait for T { fn t(self){} }

fn main() {}
